# webgpu-demo

./: .gitignore  Cargo.toml  README.md  example.blend
src/: app.rs  blend_mode.rs  camera.rs  fps.rs  framework.rs  lib.rs  main.rs  mask_shader.wgsl  render.rs  shader.wgsl  sprite.rs  start.rs  texture.rs  utils.rs  vertex.rs
src/app/: edit_mode.rs  in_game.rs  main_menu.rs  mod.rs
src/assets/: mod.rs
src/audio/: mod.rs
src/easing/: mod.rs
src/egui_render/: mod.rs
src/input/: mod.rs
src/render/: blend_mode.rs  blend_mode_shader.wgsl  blur_shader.wgsl  camera.rs  color.rs  mask_shader.wgsl  mod.rs  pipeline.rs  rect.rs  render_item.rs  screen_repeat.rs  screen_repeat_shader.wgsl  shader.wgsl  sprite.rs  sprite_instance.rs  texture_store.rs  transform.rs  ui_sprite.rs
