[package]
name = "webgpu-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.29.0", default-features = false, features = ["rwh_06"] }
wgpu = { version = "23.0.1", default-features = false, features = ["wgsl"] }
pollster = "0.2"
env_logger = "0.10"
log = "0.4"
bytemuck = { version = "1.12", features = ["derive"] }
glam = { version = "0.23.0", features = ["bytemuck"] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png"]

[[bin]]
name = "basic_draw"
path = "src/bin/basic_draw/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true