[package]
name = "webgpu-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.29.0", default-features = false, features = ["rwh_06"] }
wgpu = { version = "23.0.1", default-features = false, features = ["wgsl"] }
pollster = "0.4.0"
env_logger = "0.11.8"
log = "0.4"
bytemuck = { version = "1.12", features = ["derive"] }
glam = { version = "0.30.3", features = ["bytemuck"] }
radsort = "0.1.1"

[dependencies.image]
version = "0.25.6"
default-features = false
features = ["png"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true